--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NEXT_PUBLIC_SITE_NAME=My Blog
 NEXT_PUBLIC_SITE_DESC=Blog Description
 NEXT_PUBLIC_SITE_AVATAR_URL=
 NEXT_PUBLIC_SOCIAL_GITHUB_URL=https://github.com/your-name
+ # Google Analytics likes G-XXXXXXXXXX
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
